--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,12 +1,14 @@
 <aside id="sidebar">
   <nav>
     <ul>
-      <li class="all-movies">
+      <li class="movies">
         <%= link_to 'All Movies', movies_path, class: 'button' %>
       </li>
-      <li class="create-movie">
-        <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
-      </li>
+      <% if current_user_admin? %>
+        <li class="create-movie">
+          <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
+        </li>
+      <% end %>
     </ul>
   </nav>
 </aside>
