--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -13,6 +13,30 @@
     <%= @movie.rating %> &bull; <%= @movie.duration %>
   </h3>
 
+  <p>
+    <%= pluralize(@fans.size, 'fan') %>
+  </p>
+
+  <% if current_user %>
+    <% if @current_favourite %>
+      <%= button_to "Unfave", movie_favourite_path(@movie, @current_favourite), method: :delete, class: "button unfave" %>
+    <% else %>
+      <%= button_to "Fave", movie_favourites_path(@movie), class: "button fave" %>
+    <% end %>
+  <% end %>
+
+  <% if @fans.any? %>
+    <h3>Fans</h3>
+    <ul>
+      <% @fans.each do |fan| %>
+        <li>
+          <p><%= profile_image_for(fan, size: 35) %>
+          <%= link_to fan.name, fan %></p>
+        </li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <h3>Cast</h3>
   <p>
     <%= @movie.cast %>
@@ -33,13 +57,20 @@
     <%= format_average_stars(@movie) %>
   </p>
 
+  <h3>Genres</h3>
+  <ul>
+    <% @genres.each do |genre| %>
+    <li> <%= genre.name %> </li>
+    <% end %>
+  </ul>
+
   <% if @movie.reviews.any? %>
     <h3>Reviews</h3>
     <ol id="reviews">
       <% @movie.recent_reviews.each do |review| %>
         <li>
           <span class="review"><%= pluralize(review.stars, 'star') %></span>
-          <span class="user">by <%= review.name %></span>
+          <span class="user">by <%= review.user.name %></span>
           <span class="date">
             <%= time_ago_in_words(review.created_at) %> ago
           </span>
@@ -59,10 +90,12 @@
     <%= link_to 'Write Review', new_movie_review_path(@movie),
                         class: 'button ok review' %>
     <nav>
-      <%= link_to 'Edit', edit_movie_path(@movie), class: 'button' %>
-      <%= link_to 'Delete', @movie,
+      <% if current_user_admin? %>
+        <%= link_to 'Edit', edit_movie_path(@movie), class: 'button' %>
+        <%= link_to 'Delete', @movie,
                   class: 'button',
                   method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
     </nav>
   </footer>
 </article>
