--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,12 +5,15 @@
 <ol id="reviews">
   <% @reviews.each do |review| %>
     <li>
+      <%= profile_image_for(review.user, size: 35) %>
       <span class="review"><%= pluralize(review.stars, 'star') %></span>
-      <span class="user">by <%= review.name %></span>
+      <span class="user">by <%= link_to review.user.name, review.user%></span>
       <span class="date"><%= time_ago_in_words(review.created_at) %> ago</span>
-      <%= link_to delete_review_image, [@movie, review],
+      <% if current_user_admin? %>
+        <%= link_to delete_review_image, [@movie, review],
                   id: "#{dom_id(review)}_delete",
                   method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
       <p>
         &quot;<%= review.comment %>&quot;
       </p>
