--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -41,6 +41,12 @@
       <li>
         <%= f.collection_check_boxes :genre_ids, Genre.all, :id, :name %>
       </li>
+      <% unless @movie.new_record? %>
+        <li>
+          <%= f.label :slug %>
+          <%= f.text_field :slug, size: 30 %>
+        </li>
+      <% end %>
     </ol>
     <p>
       <%= f.submit %>
