--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -2,13 +2,33 @@
   <nav>
     <ul>
       <li class="movies">
-        <%= link_to 'All Movies', movies_path, class: 'button' %>
+        <%= nav_link_to 'Released', movies_path %>
       </li>
+      <li class="movies">
+        <%= nav_link_to 'Hits', filtered_movies_path(:hits) %>
+      </li>
+      <li class="movies">
+        <%= nav_link_to 'Flops', filtered_movies_path(:flops) %>
+      </li>
+      <li class="movies">
+        <%= nav_link_to 'Upcoming', filtered_movies_path(:upcoming) %>
+      </li>
+      <li class="movies">
+        <%= nav_link_to 'Recent', filtered_movies_path(:recent) %>
+      </li>
+
       <% if current_user_admin? %>
         <li class="create-movie">
-          <%= link_to 'Add New Movie', new_movie_path, class: 'button' %>
+          <%= nav_link_to 'Add New Movie', new_movie_path %>
+        </li>
+        <li class="movies">
+          <%= nav_link_to 'List of Users', users_path %>
+        </li>
+        <li class="movies">
+          <%= nav_link_to 'List of Genres', genres_path %>
         </li>
       <% end %>
     </ul>
   </nav>
+  <%= content_for(:side) %>
 </aside>
