--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,3 +1,5 @@
+<% title "#{@movie.title} (#{@movie.released_on.year})" %>
+
 <article id="movie" class="movie">
   <header>
     <%= image_for(@movie) %>
@@ -25,18 +27,6 @@
     <% end %>
   <% end %>
 
-  <% if @fans.any? %>
-    <h3>Fans</h3>
-    <ul>
-      <% @fans.each do |fan| %>
-        <li>
-          <p><%= profile_image_for(fan, size: 35) %>
-          <%= link_to fan.name, fan %></p>
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-
   <h3>Cast</h3>
   <p>
     <%= @movie.cast %>
@@ -56,13 +46,6 @@
   <p>
     <%= format_average_stars(@movie) %>
   </p>
-
-  <h3>Genres</h3>
-  <ul>
-    <% @genres.each do |genre| %>
-    <li> <%= link_to genre.name, genre %> </li>
-    <% end %>
-  </ul>
 
   <% if @movie.reviews.any? %>
     <h3>Reviews</h3>
@@ -88,7 +71,7 @@
 
   <footer>
     <%= link_to 'Write Review', new_movie_review_path(@movie),
-                        class: 'button ok review' %>
+                        class: 'button ok review' if @current_review == nil %>
     <nav>
       <% if current_user_admin? %>
         <%= link_to 'Edit', edit_movie_path(@movie), class: 'button' %>
@@ -99,3 +82,8 @@
     </nav>
   </footer>
 </article>
+
+<% content_for :side, (render 'movie_sidebar_extras')  %>
+<%# content_for :side do %>
+  <%#= render 'movie_sidebar_extras' %>
+<%# end %>
