--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,24 @@
 <header id="content-header">
-  <h1><%= pluralize(@users.size, 'User') %></h1>
+  <% if current_user_admin? %>
+    <h1><%= pluralize(@all_users.size, 'User') %></h1>
+  <% else %>
+    <h1><%= pluralize(@users.size, 'User') %></h1>
+  <% end %>
 </header>
 
 <ul id="users">
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.name, user %>
-    </li>
+  <% if current_user_admin? %>
+    <% @all_users.each do |user| %>
+      <li>
+        <%= link_to user.name, user %>
+        <%= "(Admin)" if user.admin? %>
+      </li>
+    <% end %>
+  <% else %>
+    <% @users.each do |user| %>
+      <li>
+        <%= link_to user.name, user %>
+      </li>
+    <% end %>
   <% end %>
 </ul>
