Add trailer to movie show page

--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -31,6 +31,10 @@
         <%= f.text_field :image_file_name %>
       </li>
       <li>
+        <%= f.label :trailer, "https://www.youtube.com/watch?v=" %>
+        <%= f.text_field :trailer %>
+      </li>
+      <li>
         <%= f.label :cast %>
         <%= f.text_field :cast %>
       </li>
